force-app/main/default/objects/Resume_Data__c/Resume_Data__c.object-meta.xml
<CustomObject>
    <description>One record per uploaded resume. Holds candidate-level data and processing status; parent of Work_Experience__c.</description>
    <label>Resume Data</label>
    <pluralLabel>Resume Data</pluralLabel>
    <nameField>
        <label>Resume Name</label>
        <type>AutoNumber</type>
        <displayFormat>RES-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>