force-app/main/default/objects/Resume_Data__c/fields/Candidate_Email__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Email__c</fullName>
    <label>Candidate Email</label>
    <type>Email</type>
</CustomField>