force-app/main/default/objects/Resume_Data__c/fields/Candidate_Website__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Website__c</fullName>
    <label>Candidate Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>