force-app/main/default/objects/Resume_Data__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Resume Data</relationshipLabel>
    <relationshipName>Resume_Data</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Contact this resume belongs to. Required — the résumé wizard captures or confirms it before parsing.</description>
</CustomField>