force-app/main/default/objects/Resume_Data__c/fields/Last_Processed__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed__c</fullName>
    <label>Last Processed</label>
    <type>DateTime</type>
</CustomField>