force-app/main/default/objects/Resume_Data__c/fields/Source_ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>Source_ContentDocumentId__c</fullName>
    <label>Source ContentDocument Id</label>
    <type>Text</type>
    <length>18</length>
    <description>The ContentDocumentId of the uploaded resume file.</description>
</CustomField>