force-app/main/default/objects/Resume_Data__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Professional Summary</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>